--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.015625"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "p_3_strikes = None #answer = 0.2502822"
+    "0.25 ** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13348388671875"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.75 ** 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0020856857299804688"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.015625 * 0.13348388671875"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0020856857299804688"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.25 ** 3) * (0.75 ** 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "119.9999580005487"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.2502822 / 0.0020856857299804688\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3628800"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factorial(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factorial(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "604800.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(factorial(10) / factorial(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1261.4227294921875"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "604800.0 * 0.0020856857299804688"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25028228759765625"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_3_strikes = (factorial(10) / (factorial(3) * factorial(7))) * (0.25 ** 3) * (0.75 ** 7)\n",
+    "p_3_strikes    #answer = 0.2502822"
    ]
   },
   {
@@ -72,12 +266,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def binom_distr(n,p,k):\n",
-    "    None"
+    "    trials = factorial(n) / (factorial(k) * factorial(n - k))\n",
+    "    successes = p ** k\n",
+    "    failures = (1 - p) ** (n - k)\n",
+    "    return trials * successes * failures"
    ]
   },
   {
@@ -89,11 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.5367431640625e-07"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None  "
+    "binom_distr(10, 0.25, 10)  "
    ]
   },
   {
@@ -105,12 +313,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 0.058399200439453125\n",
+      "6 0.016222000122070312\n",
+      "7 0.00308990478515625\n",
+      "8 0.00038623809814453125\n",
+      "9 2.86102294921875e-05\n",
+      "10 9.5367431640625e-07\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "None"
+    "prob = 0\n",
+    "newprob = 0\n",
+    "for i in np.arange(5,11):\n",
+    "    newprob = binom_distr(10,0.25,i)\n",
+    "    print(i, newprob)\n",
+    "    prob += newprob\n",
+    "    "
    ]
   },
   {
@@ -129,24 +356,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# leave the random seed here \n",
     "np.random.seed(123)\n",
-    "#\n",
-    "#\n",
-    "#\n",
-    "#"
+    "n = 5000\n",
+    "iteration = []\n",
+    "for loop in range(n):\n",
+    "    iteration.append(np.random.binomial(10, 0.25))\n",
+    "    np_it = np.array(iteration)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8]\n",
+      "[ 310  941 1368 1286  707  297   78   11    2]\n"
+     ]
+    }
+   ],
    "source": [
+    "values, counts = np.unique(np_it, return_counts=True)\n",
+    "print(values)\n",
+    "print(counts)\n",
     "# the results should look like this:\n",
     "# [0 1 2 3 4 5 6 7 8]\n",
     "# [ 310  941 1368 1286  707  297   78   11    2]"
@@ -212,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
